[refactor] examClassStudents 수정 #94